--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -9,10 +9,11 @@ output:
     new_session: yes
     css: ../custom.css
     includes:
-      after_body: insert-logo.html
+      after_body: ../insert-logo.html
     self_contained: true
     lib_dir: "public"
 ---
+
 # Introduction
 
 ```{r setup, include=FALSE}
@@ -20,603 +21,155 @@ options(htmltools.dir.version = FALSE)
 ```
 
 .sauterligne[
-Voici les recommandations de la fiche "Importer des fichiers plats" :
+Voici les recommandations de [la fiche](https://www.book.utilitr.org/datatable.html#datatable) :
 .small90[
 .indent[
 .recommandation[
-* Pour des tables de données de taille petite et moyenne (inférieure à 1 Go ou moins d'un million d'observations), il est recommandé d'utiliser les *packages* `tibble`, `dplyr` et `tidyr` qui font l'objet de la présente fiche ;
-* Pour des tables de données de grande taille (plus de 1 Go ou plus d'un million d'observations), il est recommandé d'utiliser le _package_ `data.table` qui fait l'objet de la fiche [Manipuler des données avec `data.table`].
-
+* Pour des tables de données de taille petite et moyenne (inférieure à 1 Go ou moins d'un million d'observations), il est recommandé d'utiliser le package `dplyr` ;
+* Pour des tables de données de grande taille (plus de 1 Go ou plus d'un million d'observations), il est recommandé d'utiliser le package `data.table` qui fait l'objet de la présente fiche.
 ]
 ]
 ]
 ]
 
---
+* Tous les exemples présentés sont reproductibles sur une instance [![SSPcloud](https://img.shields.io/badge/SSPcloud-Tester%20via%20SSP--cloud-informational?logo=R)](https://datalab.sspcloud.fr/launcher/inseefrlab-helm-charts-datascience/rstudio?onyxia.friendlyName=%C2%ABrstudio-utilitr%C2%BB&init.personnalInit=%C2%ABhttps%3A%2F%2Fraw.githubusercontent.com%2FInseeFrLab%2FutilitR%2Fmaster%2Fresources%2Finit_9juin.sh%C2%BB&r.version=%C2%ABinseefrlab%2Futilitr%3A0.7.0%C2%BB)
+* Certains exemples de cette présentation utilisent les données disponibles dans le package `doremifasolData` ; vous ne pourrez reproduire ces exemples que si ce package est installé sur la machine sur laquelle vous travaillez (cf. [Comment utiliser la documentation utilitR](https://www.book.utilitr.org/presentation-utilitr.html#presentation-utilitr) )
+
+---
 .sauterligne2[
 Plan de la présentation :
 ]
 
-- Objectif et spécificités du projet ;
-- Contenu de la documentation ;
-- Modes de diffusion de la documentation ;
-- Fonctionnement du projet `utilitR`.
-
-
-
-```{r, echo = FALSE, warning = FALSE, eval = FALSE}
-library(knitr)
-library(kableExtra)
-library(data.table)
-description_appariement <- 
-  as.data.table(
-    data.frame(
-      etape = c(
-        rep('Utiliser `R` à l’Insee', 4),
-        rep("Mener un projet statistique avec `R`", 5),
-        rep("Importer des données", 3),
-        rep("Manipuler des données", 3),
-        rep("Produire des _outputs_", 3)
-        ),
-      filtres_validation = 
-        c(
-          "Les environnements de travail avec `R` à l'Insee : AUSv3 et SSP Cloud", 
-          "Configurer Git et Gitlab",
-          "Personnaliser la configuration de `R`",
-          "Gérer les ressources informatiques avec `R`",
-          "Utiliser les projets RStudio",
-          "Utiliser Git avec RStudio",
-          "Installer des packages et gérer les dépendances",
-          "Choisir des packages",
-          "Demander de l'aide et se documenter",
-          "Importer des données (SAS, csv, txt, odt, xlsx...)",
-          "Utiliser une API",
-          "Utiliser des bases de données",
-          "Manipuler des données avec `data.table`",
-    # + Manipuler des données (table des données, données textuelles, données spatiales) ;
-    # + Utiliser des bases de données PostgreSQL et Oracle ;
-    # + Faire des graphiques ;
-    # + Rédiger des documents avec `R Markdown` ;
-    # + Produire des rapports automatisés avec `R Markdown`.
-          "BBB",
-          "AAA",
-          "BBB",
-          "AAA",
-          "BBB"
-        )
-    )
-  )
-
-kbl(description_appariement, align = "cll",
-    col.names = c("Partie", 
-                  "Fiches")
-) %>%
-  kable_styling(full_width = TRUE) %>%
-  row_spec(0, align = 'c') %>%
-  column_spec(1, bold = TRUE, width = "6cm") %>%
-  column_spec(2, width = "12cm") %>% 
-  collapse_rows(columns = 1, 
-                valign = "middle", 
-                longtable_clean_cut = TRUE)
-```
+- Présentation de `data.table` ;
+- Manipuler des données avec `data.table`: principe ;
+- Manipuler des données avec `data.table`: illustration ;
+- L'opérateur `:=`: késako ? ;
+- Programmer des fonctions avec `data.table`.
 
 
 ---
-# Introduction : origine du projet
+# Présentation de `data.table`
+## Principes structurants
 
-Le projet `utilitR` est parti de deux constats : 
-
-1. **La transition des agents vers `R` est freinée par une multiplicité d’obstacles** :
-    + Eclatement de la documentation de l'écosystème `R` ;
-    + Multiplicité de *packages*, de qualité variable et parfois redondants ;
-    + Barrière linguistique : la grande majorité de la documentation est en anglais ;
-    + Diversité des cas d'usage de `R` à l'Insee et dans le SSP ;
-    
---
-
-2. **Face à ces difficultés, il n'existe pas de documentation de référence sur l'usage de `R` par les statisticiens** :
-    +  La documentation de référence sur `SAS` en français, rédigée par
-Axelle Chauvet et largement diffusée à l’Insee et dans le SSP, n'a pas d'équivalent en `R` ;
-    + La documentation sur `R` est riche mais propose peu d'exemples sur données réelles, proches des cas d'usage des agents.
-    
----
-# Introduction : objectif du projet
-
-Le projet `utilitR` a pour objectif de produire une documentation qui réponde à deux questions :
-
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
-- Comment réaliser efficacement des tâches élémentaires avec `R`.
-
-<br>
-Cette documentation cherche par ailleurs à respecter trois exigences :
-
-- exister en différents formats pour s'adapter aux besoins des agents ;
-- être proche des cas d'usage de `R` dans la statistique publique ;
-- proposer des recommandations adaptées au contexte de travail des agents du service statistique public.
-
-
-
-
-<!-- - Cette documentation est principalement destinée aux agents du Service statistique public (mais pas exclusivement). Les recommandations sont donc adaptées au contexte de travail des agents du service statistique public ; -->
-<!-- - Cette documentation est issue de la mise en commun des connaissances des agents du SSP sur `R` dans une approche collaborative, sur le modèle de Wikipedia ; -->
-<!-- - Cette documentation n'est pas une introduction théorique au langage `R`, mais un guide pratique pour le statisticien. Elle ne se substitue donc pas à l'offre de formation existante sur `R`, mais la complète. -->
-
-
----
-# Introduction : apports du projet
-## Une démarche collaborative et _open source_
-
-* Projet entièrement _open source_ (`r fontawesome::fa("fab fa-github")` [`InseeFrLab`](https://github.com/InseeFrLab/utilitR)) ;
-* Démarche collaborative impliquant __plus de 20 contributeurs__ :
-    + dispersés dans toute la France ;
-    + issus de plusieurs institutions du SSP.
-* Organisation horizontale, sur le modèle de `Wikipedia` :
-    + relecture par les pairs ;
-    + validation collégiale ;
-* Acculturation à des outils favorisant la **reproductibilité** et la **pérennité**, au-delà de l'usage de `r fontawesome::fa("fab fa-r-project")` :
-    + `Docker` `r fontawesome::fa("fab fa-docker")` ;
-    + `Git` `r fontawesome::fa("fab fa-git-alt")` ;
-    + `Github` `r fontawesome::fa("fab fa-github")`.
-
----
-# Introduction : apports du projet
-## Des choix techniques au service de la qualité
-
-* Une documentation pensée pour le statisticien :
-    + Recommandations adaptées au contexte de travail des agents du service statistique public ;
-    + Exemples sur [données réelles Insee](https://www.insee.fr) (grâce au _package_ [`doremifasol`](https://github.com/InseeFrLab/DoReMIFaSol)) ;
-    + Documentation entièrement reproductible.
-
-* Processus de publication à l'état de l'art :
-    + Plusieurs _outputs_ (site web `r fontawesome::fa("fab fa-firefox")`, livre PDF `r fontawesome::fa("fas fa-file-pdf")`) avec les mêmes codes sources ;
-    + Publication automatique à chaque modification des fichiers sources.
-
-* Défis techniques surmontés ont permis des évolutions de l'écosystème `R Markdown` :
-    + Solutions bénéficiant à l'ensemble de la communauté `r fontawesome::fa("fab fa-r-project")`.
-
-<br>
-
-__Le projet `utilitR` est un laboratoire qui préfigure les évolutions des méthodes de travail des statisticiens.__
-
----
-# Contenu de la documentation
-## Une documentation en deux grandes parties
-
-La documentation `utilitR` vise à répondre à deux grandes questions :
-
-- Comment (bien) travailler avec `R` pour profiter de la richesse de son écosystème ;
-- Comment réaliser efficacement des tâches élémentaires avec `R`.
-
----
-# Contenu de la documentation
-## Première partie : comment (bien) travailler avec `R`
-
-La première partie de la documentation présente non seulement l'usage de `R` et de RStudio, mais également tout l'écosystème informatique autour de `R`, afin d'aider les agents à être autonomes :
-
-- Présentation des environnements informatiques d'usage disponibles à l'Insee (AUSv3 et SSP Cloud) ;
-- Tutoriels détaillés sur l'usage des projets RStudio, la configuration de `Git` et l'utilisation de `Git` avec RStudio ;
-- Fiches-conseils sur comment choisir un _package_, chercher de l'aide et se documenter.
-
----
-# Contenu de la documentation
-
-## Première partie : comment (bien) travailler avec `R`
-
-.small90[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="4"> Utiliser <code class="remark-inline-code">R</code> à l’Insee </td>
-   <td style="text-align:left;width: 12cm; "> Les environnements de travail avec <code class="remark-inline-code">R</code> à l'Insee : AUSv3 et SSP Cloud </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Configurer <code class="remark-inline-code">Git</code> et Gitlab </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Personnaliser la configuration de <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Gérer les ressources informatiques avec <code class="remark-inline-code">R</code> </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Mener un projet statistique avec <code class="remark-inline-code">R</code> </td>
-   <td style="text-align:left;width: 12cm; "> Utiliser les projets RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser <code class="remark-inline-code">Git</code> et Gitlab avec RStudio </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Installer des packages et gérer les dépendances </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Choisir des packages </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Demander de l'aide et se documenter </td>
-  </tr>
-</tbody>
-</table>
-]
-
----
-# Contenu de la documentation
-## Première partie : comment (bien) travailler avec `R`
-
-Les spécificités informatique de l'Insee sont signalées dans des boîtes colorées.
-
-.small90[
-.specificite[
-Une forge interne `GitLab` est accessible depuis AUS. Son adresse, ainsi que des éléments complémentaires à cette fiche, sont disponibles dans la documentation AUS (`Y:/Documentation/AUSV3/`).
-]
-]
-
---
-
-.sauterligne[
-Les éléments spécifiques à l'Insee sont bien isolés du reste de la documentation, de façon à ce que les services statistiques ministériels puissent se l'approprier aisément.
-]
-
-
----
-# Contenu de la documentation
-## Seconde partie : réaliser les tâches élémentaires avec `R`
-
-.small90[
-<table class="table" style="margin-left: auto; margin-right: auto;">
- <thead>
-  <tr>
-   <th style="text-align:center;text-align: center;"> Partie </th>
-   <th style="text-align:left;text-align: center;"> Fiches </th>
-  </tr>
- </thead>
-<tbody>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Importer des données </td>
-   <td style="text-align:left;width: 12cm; "> Importer des données (SAS, csv, txt, odt, xlsx...) </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser une API </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Utiliser des bases de données </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="5"> Manipuler des données </td>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec <code class="remark-inline-code">data.table</code> </td>
-  </tr>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données avec le <code class="remark-inline-code">tidyverse</code> </td>
-   <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données textuelles </td>
-  </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Manipuler des données spatiales</td>
-   </tr>
-  <tr>
-   <td style="text-align:left;width: 12cm; "> Utiliser des données d'enquête </td>
-  </tr>
-  <tr>
-   <td style="text-align:center;width: 6cm; font-weight: bold;vertical-align: middle !important;" rowspan="3"> Produire des <em>outputs</em> </td>
-   <td style="text-align:left;width: 12cm; "> Réaliser des graphiques </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Rédiger des documents avec <code class="remark-inline-code">R Markdown</code>  </td>
-  </tr>
-  <tr>
-   
-   <td style="text-align:left;width: 12cm; "> Produire des rapports automatisés </td>
-  </tr>
-</tbody>
-</table>
-]
-
----
-# Contenu de la documentation
-## Contenu des fiches
-
-Les fiches de la documentation ont un certain nombre de caractéristiques communes :
-
-- Elles formulent des recommandations précises et présentent en détail les outils et _packages_ adaptés ;
-- Elles proposent des exemples reproductibles utilisant des données de l'Insee pour aider les agents à s'approprier les outils ;
-- Elles comportent des conseils et des remarques relatifs aux bonnes pratiques ;
-- Elles donnent des indications sur les spécificités informatiques de l'Insee.
-
----
-# Contenu de la documentation
-## Des recommandations précises
-
-.sauterligne[
-
-- Les fiches commencent systématiquement par des **recommandations** sur les outils et les _packages_ à utiliser ou à éviter. 
-- Elles indiquent dans quelles situations et sous quelles conditions un _package_ doit être utilisé.
-- Ces recommandations sont cohérentes avec celles du COPS (Comité de certification des _packages_ `R`).
-]
-
---
-
-.sauterligne[
-Voici les recommandations de la fiche "Importer des fichiers plats" :
-.small90[
-.indent[
-.recommandation[
-* Pour importer des données de taille réduite (jusqu'à 1 Go), il est recommandé d'utiliser les fonctions `read_csv()` et `read_delim()` du *package* `readr` ;
-* Pour importer des données de taille plus importante (supérieure à 1 Go), il est recommandé d'utiliser la fonction `fread()` du *package* `data.table`.
-* L'usage du *package* `csvread` est déconseillé, de même que l'utilisation des fonctions natives de `R` `read.csv()` et `read.delim()`.
-]
-]
-]
-]
-
----
-# Contenu de la documentation
-## Une présentation détaillée des outils recommandés
-
-Les fiches présentent en détail les outils et les _packages_ recommandés (cas d'usage, principales options).
-
---
-
-.sauterligne[
-Le *package* `data.table` permet d'importer des fichiers plats avec la fonction `fread()`. Cette fonction présente trois avantages [...]
-]
-
---
-
-
-.sauterligne[
-Les principales options de `fread()` sont les suivantes :
-]
-.small90[
-| Argument         | Valeur par défaut                           | Fonction                                                              |
-|------------------|---------------------------------------------|-----------------------------------------------------------------------|
-| `file`             | Aucune                                      | Le chemin du fichier à importer                                       |
-| `nrows`            | `Inf`                                         | Nombre maximum de lignes à importer (pas de limite par défaut)        |
-| `select`           | `NULL`                                        | Sélectionner les colonnes à importer                                  |
-| `encoding`         | `"unknown"`                                   | Définir l'encodage du fichier (`"UTF-8"` ou `"Latin-1"`)                                        |
-]
-
----
-# Contenu de la documentation
-## Des exemples reproductibles et proches des cas d'usage
-
-La documentation comporte de nombreux exemples. Ces exemples ont trois particularités :
-
-- Les exemples sont **reproductibles** : les agents peuvent reproduire la plupart des exemples de la documentation en en exécutant le code ;
-- Les exemples sont **proches des cas d'usages de `R` dans le SSP** : les jeux de données utilisés dans les exemples sont issus de données disponibles sur [insee.fr](www.insee.fr) (code officiel géographique, base permanente des équipements, répertoire Filosofi) ;
-- Les jeux d'exemple sont **disponibles dans tous les environnements de travail** (SSP Cloud, AUSv3, poste local). Ils sont mis à disposition dans le _package_ `doremifasolData` développé par Pierre Lamarche et Pierre-Yves Berrard.
-
----
-# Contenu de la documentation
-## Des exemples reproductibles et proches des cas d'usage
+* Package existant depuis 2006
+    + L'un des plus utilisés: +700k téléchargements par mois sur le CRAN
+    + 3000 packages sur le CRAN en dépendent plus ou moins directement
+* Très pérenne, très robuste mais en évolution permanente
+    + Ne dépend que de R-base (aucune autre dépendance)
+    + Grosse communauté de développeurs : plus de 100 contributeurs sur Github [Github](https://github.com/Rdatatable/data.table)
+    + Enormément de tests pour fiabiliser les évolutions (taux couverture : 99%)
 
 ```{r, echo = FALSE}
-# On augmente le nombre de lignes imprimées pour faire apparaître deux catégories
-options(tibble.print_min = 6)
-options(tibble.print_max = 6)
-options(dplyr.print_min  = 6)
-options(dplyr.print_max  = 6)
-```
-
-```{r, echo = TRUE, warning = FALSE, message = FALSE, eval = FALSE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
-```
-
---
-
-```{r, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
-library(doremifasolData)
-library(magrittr)
-library(dplyr)
-
-nombre <- doremifasolData::bpe_ens_2018 %>%
-  as_tibble() %>%
-  filter(TYPEQU == "B316") %>% 
-  group_by(DEP) %>% 
-  summarise(nombre_station_serv = sum(NB_EQUIP, na.rm = TRUE)) 
-nombre
+knitr::include_graphics("https://raw.githubusercontent.com/Rdatatable/data.table/master/.graphics/logo.png")
 ```
 
 ---
-# Contenu de la documentation
-## Conseils et remarques
+# Présentation de `data.table`
+## Pourquoi `data.table` ?
 
-Les fiches contiennent des **conseils** et des **remarques** avec trois objectifs :
-- orienter les agents en fonction de leur niveau en `R` ;
-- aider les agents à s'approprier l'environnement `R` ;
-- indiquer les bonnes pratiques à adopter.
+* Package beaucoup plus rapide que `tidyverse`
+* Optimise l'usage mémoire: avantageux pour les grosses données
+* Package stable: peu de risques que le code casse
+* Enormément de fonctions pré-implémentées
+* Programmation et automatisation avec des fonctions facile
+* Codes concis ce qui rend un code plus lisible et facilite ses évolutions
 
---
-
-.small90[
-.indent[
-.conseil[
-Si vous êtes complètement débutants en `R`, il est recommandé d'utiliser l'utilitaire d'importation de ` RStudio`. Une fois que les données sont correctement importées, vous pourrez copier-coller le code dans votre script `R` et vous familiariser avec les fonctions du *package* `readr`.
-]
-
-.remarque[
-Il est nettement plus simple de sélectionner des colonnes avec `fread()` qu'avec les fonctions du *package* `readr`. Il est donc recommandé d'utiliser `fread()` lorsque vous souhaitez sélectionner facilement les colonnes à importer.
-]
-
-<!-- .specificite[ -->
-<!-- La direction générale de l'Insee est située à Montrouge. -->
-<!-- ] -->
-]
-]
-
-<!-- IL FAUDRAIT METTRE UN EXEMPLE DE CODE -->
-
-    
----
-# Diffusion de la documentation
-
-La documentation est diffusée sous trois formes :
-
-- `r fontawesome::fa("fab fa-firefox")` un site internet ([www.utilitr.org](https://www.utilitr.org)) ;
-- `r fontawesome::fa("fas fa-print")` chaque fiche est disponible en format A4 sur le site internet ;
-- `r fontawesome::fa("fas fa-file-pdf")` l'intégralité de la documentation en format pdf. 
-
-<br> Il est envisagé que le site internet soit actualisé en continu, tandis que la brochure pdf serait publiée de façon ponctuelle et millésimée.
-
---
-
-.sauterligne2[
-Questions :
-
-- `r fontawesome::fa("fas fa-question")` Quel format de diffusion préférez-vous ?
-- `r fontawesome::fa("fas fa-question")` La version intégrale de la documentation vous serait-t-elle utile, sachant que chaque fiche est déjà disponible en format A4 imprimable ?
-- `r fontawesome::fa("fas fa-question")` Une version __imprimée et millésimée__ de la brochure (350 pages) vous serait-elle utile ?
-
-]
+`data.table` n'est pas réservé aux grosses données ou aux utilisateurs avancés ! 
 
 
 ---
-# Fonctionnement du projet
-## Positionnement du projet `utilitR` à l'Insee
+# Présentation de `data.table`
+## Tout se passe dans les crochets `[...]`
 
-- Le projet est l’une des multiples initiatives lancées pour faciliter la transition vers `R` : 
-  + Supports du groupe de travail USSR ;
-  + FunCamp développé par la Division Innovation et Instruction Technique (Diit) ;
-  + Guide à l'usage du statisticien débutant (rédigé par Cédric Afsa) ;
-  + Formation Travail collaboratif avec `R` (en cours de test avant déploiement).
-
---
-
-- Les recommandations de *packages* sont cohérentes avec celles du Comité de certification des _packages_ `R` (COPS).
-
---
-
-- La documentation est adaptée à l’environnement informatique du statisticien :
-  + Description des environnements de travail (AUSv3 et SSP Cloud) ;
-  + Présentation des outils assurant la qualité des programmes en `R` comme les `Rprojects` et le contrôle de version avec `git` et Gitlab.
-
---
-
-- L'articulation entre `utilitR` et l'offre de formation sur `R` n'est pas encore clairement établie.
-
----
-# Fonctionnement du projet
-## Organisation du projet
-
-**Le projet `utilitR` est un projet collaboratif, horizontal, _open source_ et ouvert à tous, auquel tous les agents peuvent contribuer.**
-
---
-* Cinq principes détaillés dans le [manifeste](https://github.com/InseeFrLab/utilitR/blob/master/Manifeste.md) : transparence, ouverture, bienveillance, exigence et reproductibilité.
-
---
-
-* Organisation sans hiérarchie :
-    * Un _groupe de contributeurs_ (environ 20), parmi lesquels deux coordinateurs (Lino Galiana et Olivier Meslin) ;
-    * Un _comité de parrainage_ composé de managers : Benoît Rouppert, Arnaud Degorre, Patrick Sillard, Sébastien Roux.
---
-* La marche à suivre pour contribuer est détaillée dans le [guide de contribution](https://github.com/InseeFrLab/utilitR/blob/master/CONTRIBUTING.md).
-
---
-
-**Vous pouvez rejoindre l'équipe de contributeurs à tout moment.**
-
----
-# Fonctionnement du projet
-## Méthode de travail : une démarche collaborative et _open source_
-
-Le projet `utilitR` est entièrement développé avec des outils collaboratifs :
-
-- Tous les codes du projet sont stockés sur un dépôt Github ([https://github.com/InseeFrLab/utilitR](lien)) et disponibles sous licence libre ;
-- Les travaux sont menés selon les méthodes de développement logiciel (_pull requests_, _issues_) ;
-- Toutes les contributions sont soumises à une relecture par les pairs et validées collégialement (sur le modèle de Wikipedia).
-
----
-# Fonctionnement du projet
-## Méthode de travail
-
-Le projet `utilitR` utilise des méthodes d'intégration continue à l'état de l'art :
+* `data.table` un package dont l'objet central est le... `data.table`
+* version améliorée du `data.frame` de base : le `data.table`
+* syntaxe particulière associée à cette évolution: tout se passe dans les crochets: `[...]`
+* très inspiré par SQL
 
 ```{r, echo = FALSE}
-knitr::include_graphics("./resources/githubCI.png")
+knitr::include_graphics("https://linogaliana.netlify.app/img/headers/datatable.png")
 ```
----
-# Fonctionnement du projet
-## Méthode de travail : structuration du projet
 
-<!-- en un site web ou un PDF cohérent (gestion des numéros de chapitre, des -->
-<!-- liens entre fiches, etc.) -->
-
-<!-- (`.Rmd` ➜ `.md` ➜ `.html`) ; -->
-<!-- (`.md` ➜ `.html` ➜ `.pdf`) ; -->
-
-* Les codes sources de la documentation prennent la forme de fichiers `R Markdown`, qui rassemblent les textes et les exemples de codes ;
-* `R` compile ces codes sources de deux manières :
-    + Production d'un site internet grâce au _package_ `blogdown` ;
-    + Production d'un livre en format A4 grâce au _package_ `pagedown` ;
-    + De plus, l'utilisation de `paged.js` permet de transformer chaque page du site internet en un chapitre paginé prêt à être imprimé.
-* Les modèles de document reposent sur les technologies Web standards (CSS et Javascript) et sont organisés sous la forme d'un _package_.
-
---
-
-<br>
-* Avantages :
-    + le livre et le site web sont générés à partir des mêmes codes sources ;
-    + L'utilisation des outils technologies Web permet de ne pas utiliser `LaTeX` ;
-    + Le projet `utilitR` a induit des évolutions de l'écosystème `R Markdown` qui bénéficient à de nombreux utilisateurs.
+> on part du `data.table` `DT`, on sélectionne certaines lignes avec `i`, puis on calcule `j` pour chaque groupe défini par `by`. Si on fait un parallèle avec `SQL`, `i` correspond au `WHERE`, `j` au `SELECT` et `by` au `GROUP BY`
 
 ---
-# Fonctionnement du projet
-## Méthode de travail : reproductibilité et qualité
+# Présentation de `data.table`
+## Premier jeu de données d'exemple
 
-Le dépôt Github d'`utilitR` propose :
+Avant de travailler sur données réelles, un jeu de données d'exemple 
 
-* Un __environnement informatique complet et reproductible__ pour produire la documentation (image `Docker`) ;
-* Des scripts d'**intégration continue** qui vérifient que les contributions ne comportent pas d'erreur de programmation, et que les exemples sont bien reproductibles ;
-* Des scripts de **déploiement continu** qui compilent la documentation et déploient le site internet à chaque modification de la branche `master` ;
-* Un **site de prévisualisation** (via `Netlify`) sur lequel les contributeurs peuvent voir les modifications qu'ils apportent au site, sans que le site public ne soit modifié.
-
---
-
-L'automatisation de ces processus présente de multiples avantages :
-
-+ elle allège le travail des coordinateurs et des contributeurs ;
-+ elle assure un environnement plus reproductible et facilite le repérage des erreurs ;
-+ elle permet aux contributeurs d'ignorer les détails techniques de la production de la documentation et de se concentrer uniquement sur le fond.
+```{r}
+dt <- data.table(x = c("A", "B", "C"),
+                 y = 1:12,
+                 z = 3:6)
+dt
+```
 
 ---
-# Où en est le projet aujourd'hui ?
+# Présentation de `data.table`
+## Tout se passe dans les crochets `[...]`
 
-* Un portail d'accès sous forme de site *web* :
-    + La documentation principale est disponible sur [www.book.utilitr.org](www.book.utilitr.org) ;
-    + Guide des bonnes pratiques en `R` disponible sur [www.pratiques.utilitr.org](www.pratiques.utilitr.org).
+* `R base`: les crochets `df[...]` servent uniquement à sélectionner des lignes ou des colonnes
+* `data.table`: crochets permettent de tout faire
+    + pas nécessaire d'utiliser le préfixe `DT$` pour se référer aux variables à l'intérieur de `[...]`
+    + apporte concision, donc lisibilité
+    + optimisé: réduit le temps de traitement des données car ne manipule que les colonnes mentionnées
+    
+Exemple: on veut calculer la moyenne de `y` par groupe défini par `x`, uniquement sur les observations pour lesquelles `x` est supérieur à 3
 
---
+<table class='table' style = "width : 70%;">
+<tr> <td>**`Base R`**</td> 
+<td>
+```{r, eval=FALSE}
+aggregate(
+  dt[dt[["x"]] > 3]$y,
+  by = list(dt[dt[["x"]] > 3]$z),
+  FUN = sum)
+```
+</td>
+</tr>
+<tr>
+<td>**`dplyr`**</td> 
+<td>
+```{r, eval=FALSE}
+dt %>%
+  dplyr::filter(x > 3) %>%
+  dplyr::group_by(z) %>%
+  dplyr::summarise(sum(y))
+```
+</td>
+</tr>
+<tr>
+<td>**`data.table`**</td> 
+<td>
+```{r, eval=FALSE}
 
-* Prochaines étapes :
-    + Mai 2021 : finalisation des contenus ;
-    + 8 juin 2021 : lancement officiel d'`utilitR` ;
-    + Septembre 2021 : diffusion de la version 1 de la brochure pdf.
+dt[x > 3, sum(y), by = z]
+```
+</td>
+</tr>
+</table>
+
+</div>
+
+---
+# Manipuler des données avec `data.table`: principe ;
+## Enchaîner des opérations
+
+* il suffit d'accoler les opérateurs `[...]`
+
+Exemple: moyenne d'une variable par groupe, puis on trie la table.
+
+```{r}
+# En chaînant
+ans <- dt[ , .(moyenne = mean(y, na.rm = TRUE)), by = x][order(moyenne)]
+ans
+```
+
 
 ---
 # Remerciements
+
 
 <!-- Le projet `utilitR` est un projet collaboratif qui a bénéficié des contributions de :  -->
 <!-- r paste0(paste(format(Filter(function(x) !("cph" %in% x$role), desc::desc_get_authors()), include = c("given", "family")), collapse = ", "), ".") -->
